--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -8,7 +8,7 @@
   border-bottom: 1px solid black;
 }
 .logo {
-  margin-left: 0;
+  margin-left: 20px;
   font-size: 20px;
   font-weight: 800;
   color: red;
@@ -37,4 +37,5 @@
   padding: 5px;
   margin-left: 5px;
   margin-right: 5px;
+  cursor: pointer;
 }
